--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 poise = "0.5.7"
-redis = "0.23.3"
+redis = {version = "0.23.3", features = ["aio", "tokio-comp"]}
+serde = "1.0.193"
+serde_json = "1.0.108"
 tokio = {version = "1.34.0", features = ["rt-multi-thread","process"]}
